--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,24 @@
     <groupId>com.example</groupId>
     <artifactId>product_price_monitoring</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>product-catalog-common</module>
+        <module>product-catalog-app</module>
+        <module>product-catalog-core</module>
+        <module>product-catalog-infrastructure</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+    <!--Versions-->
+        <app-module.version>1.0-SNAPSHOT</app-module.version>
+        <common-module.version>1.0-SNAPSHOT</common-module.version>
+        <infrastructure-module.version>1.0-SNAPSHOT</infrastructure-module.version>
+        <core-module.version>1.0-SNAPSHOT</core-module.version>
     </properties>
 
 </project>
