Check dao and services

--- a/product-catalog-app/src/main/resources/application.properties
+++ b/product-catalog-app/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 db.driver=org.postgresql.Driver
-db.url=jdbc:mysql://localhost:3306/product_catalog
+db.url=jdbc:postgresql://localhost:5432/product_catalog
 db.username=postgres
 db.password=postgres
 
