--- a/product-catalog-app/pom.xml
+++ b/product-catalog-app/pom.xml
@@ -10,6 +10,7 @@
     </parent>
 
     <artifactId>product-catalog-app</artifactId>
+    <packaging>war</packaging>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -29,4 +30,18 @@
             <version>${infrastructure-module.version}</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <finalName>product-catalog</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.3.1</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
