--- a/product-catalog-common/pom.xml
+++ b/product-catalog-common/pom.xml
@@ -10,6 +10,7 @@
     </parent>
 
     <artifactId>product-catalog-common</artifactId>
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
