--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,8 @@
         <spring-boot.version>3.3.10</spring-boot.version>
         <jakarta.version>3.0.0</jakarta.version>
         <servlet-api.version>6.1.0</servlet-api.version>
-        <mapstruct.version>1.5.2.Final</mapstruct.version>
         <lombok.version>1.18.24</lombok.version>
+        <mapstruct.version>1.5.3.Final</mapstruct.version>
     </properties>
 
     <build>
@@ -105,11 +105,6 @@
             <version>${jakarta.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.mapstruct</groupId>
-            <artifactId>mapstruct</artifactId>
-            <version>${mapstruct.version}</version>
-        </dependency>
-        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
@@ -131,5 +126,18 @@
 <!--            <artifactId>spring-boot-starter-tomcat</artifactId>-->
 <!--            <version>${spring-boot.version}</version>-->
 <!--        </dependency>-->
+
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>${mapstruct.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+            <version>${mapstruct.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 </project>
