--- a/product-catalog-app/src/main/resources/application.properties
+++ b/product-catalog-app/src/main/resources/application.properties
@@ -6,3 +6,4 @@ db.password=postgres
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 hibernate.hbm2ddl.auto=update
 hibernate.show_sql=true
+hibernate.format_sql=true
