--- a/pom.xml
+++ b/pom.xml
@@ -44,25 +44,11 @@
         <hamcrest.version>3.0</hamcrest.version>
         <xml.version>2.3.1</xml.version>
         <json.path.version>2.9.0</json.path.version>
+        <commons-fileupload.version>1.5</commons-fileupload.version>
     </properties>
 
     <build>
         <plugins>
-<!--            <plugin>-->
-<!--                <groupId>org.springframework.boot</groupId>-->
-<!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
-<!--                <version>${spring-boot.version}</version>-->
-<!--                <configuration>-->
-<!--                    <mainClass>com.example.ProductCatalogApplication</mainClass>-->
-<!--                </configuration>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <goals>-->
-<!--                            <goal>repackage</goal>-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
@@ -141,17 +127,6 @@
             <version>${servlet-api.version}</version>
             <scope>provided</scope>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-web</artifactId>-->
-<!--            <version>${spring-boot.version}</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-tomcat</artifactId>-->
-<!--            <version>${spring-boot.version}</version>-->
-<!--        </dependency>-->
-
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
@@ -219,7 +194,6 @@
             <version>${jackson.version}</version>
         </dependency>
 
-
         <!--LOG-->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
@@ -236,7 +210,6 @@
             <artifactId>log4j-slf4j2-impl</artifactId>
             <version>${log4j.version}</version>
         </dependency>
-
 
         <!--TEST-->
         <dependency>
@@ -291,12 +264,11 @@
             <version>${xml.version}</version>
         </dependency>
 
-
         <!-- Для работы с multipart-->
         <dependency>
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
-            <version>1.5</version>
+            <version>${commons-fileupload.version}</version>
         </dependency>
         <dependency>
             <groupId>com.jayway.jsonpath</groupId>
