Add spring boot

--- a/product-catalog-app/src/main/resources/application.properties
+++ b/product-catalog-app/src/main/resources/application.properties
@@ -1,11 +1,14 @@
-db.driver=org.postgresql.Driver
-db.url=jdbc:postgresql://localhost:5432/product_catalog
-db.username=postgres
-db.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/product_catalog
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
-hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-hibernate.hbm2ddl.auto=update
-hibernate.show_sql=true
-hibernate.format_sql=true
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.location=/tmp
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=10MB
+
+server.port=8080
+server.servlet.context-path=/api
 
 jwt.secret.key=Senla
