--- a/product-catalog-app/src/main/resources/application.properties
+++ b/product-catalog-app/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/product_catalog
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.location=/tmp
@@ -11,4 +11,4 @@ spring.servlet.multipart.max-request-size=10MB
 server.port=8080
 server.servlet.context-path=/api
 
-jwt.secret.key=Senla
+jwt.secret.key=${JWT_SECRET_KEY}
