--- a/product-catalog-infrastructure/pom.xml
+++ b/product-catalog-infrastructure/pom.xml
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>com.example</groupId>
             <artifactId>product-catalog-core</artifactId>
-            <version>${core-module.version}</version>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
