Add repositories and flyway migration

--- a/.env
+++ b/.env
@@ -1,13 +1,7 @@
 POSTGRES_DB=product_catalog
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/product_catalog
-SPRING_DATASOURCE_USERNAME=postgres
-SPRING_DATASOURCE_PASSWORD=postgres
-SPRING_DATASOURCE_DRIVER_CLASS_NAME=org.postgresql.Driver
-SPRING_SERVLET_MULTIPART_ENABLED=true
-SPRING_SERVLET_MULTIPART_LOCATION=/tmp
-SPRING_SERVLET_MULTIPART_MAX_FILE_SIZE=5MB
-SPRING_SERVLET_MULTIPART_MAX_REQUEST_SIZE=10MB
+DATASOURCE_URL=jdbc:postgresql://postgres:5432/product_catalog
+DATASOURCE_DRIVER=org.postgresql.Driver
 
 JWT_SECRET_KEY=super-secret-key-that-is-long-enough-123456Senla
