--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,22 +18,12 @@ services:
       context: ./product-catalog-app
       dockerfile: Dockerfile
     container_name: product-catalog-app
+    env_file:
+      - .env
     depends_on:
       - postgres
     ports:
       - "8080:8080"
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/product_catalog
-      SPRING_DATASOURCE_USERNAME: postgres
-      SPRING_DATASOURCE_PASSWORD: postgres
-      SPRING_DATASOURCE_DRIVER_CLASS_NAME: org.postgresql.Driver
-      SERVER_PORT: 8080
-      SERVER_SERVLET_CONTEXT_PATH: /api
-      SPRING_SERVLET_MULTIPART_ENABLED: "true"
-      SPRING_SERVLET_MULTIPART_LOCATION: /tmp
-      SPRING_SERVLET_MULTIPART_MAX_FILE_SIZE: 5MB
-      SPRING_SERVLET_MULTIPART_MAX_REQUEST_SIZE: 10MB
-      JWT_SECRET_KEY: super-secret-key-that-is-long-enough-123456Senla
     networks:
       - catalog_network
 
