--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,6 @@
         <module>product-catalog-common</module>
         <module>product-catalog-app</module>
         <module>product-catalog-core</module>
-        <module>product-catalog-infrastructure</module>
     </modules>
 
     <properties>
@@ -37,6 +36,7 @@
         <jfreechart.version>1.5.3</jfreechart.version>
         <jwt.version>0.12.6</jwt.version>
         <lombok.version>1.18.32</lombok.version>
+        <flyway.version>11.9.0</flyway.version>
     </properties>
 
     <build>
@@ -155,6 +155,13 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <!-- Миграции -->
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-database-postgresql</artifactId>
+            <version>${flyway.version}</version>
         </dependency>
     </dependencies>
 </project>
