--- a/product-catalog-app/src/main/resources/application.properties
+++ b/product-catalog-app/src/main/resources/application.properties
@@ -1,14 +1,35 @@
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+# DataSource
+spring.datasource.driver-class-name=${DATASOURCE_DRIVER}
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
 
+# Multipart files
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.location=/tmp
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=10MB
 
+# JPA
+spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=update
+
+# Server
 server.port=8080
 server.servlet.context-path=/api
 
+# Secret
 jwt.secret.key=${JWT_SECRET_KEY}
+
+# Logging
+logging.level.org.hibernate.engine.jdbc.spi.SqlExceptionHelper=ERROR
+
+# Migration
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
+spring.flyway.schemas=public
+
+spring.flyway.user=${POSTGRES_USER}
+spring.flyway.password=${POSTGRES_PASSWORD}
+spring.flyway.url=${DATASOURCE_URL}
